fix: LPL fixed alignment of profile navbar on smaller screens

--- a/twitter.gt2eb.style.scss
+++ b/twitter.gt2eb.style.scss
@@ -1540,6 +1540,7 @@ body[data-payment-endpoint-path] {
 
     .gt2-legacy-profile-nav-left {
       align-items: center;
+      width: 0;
       // avatar
       .gt2-legacy-profile-nav-avatar img {
         border-radius: 9999px;
